--- a/.pylintrc
+++ b/.pylintrc
@@ -23,6 +23,7 @@ disable=
     consider-using-in,
     consider-using-set-comprehension,  # requires Python 2.7+, but we still require Python 2.6 support
     consider-using-ternary,
+    consider-using-with,
     cyclic-import,  # consistent results require running with --jobs 1 and testing all files
     deprecated-lambda,
     deprecated-method,
