--- a/.github/workflows/pythonlinters.yml
+++ b/.github/workflows/pythonlinters.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install flake8 pylint
+          pip install --constraint ci-constraints.txt flake8 pylint
 
       - name: Lint with flake8
         run: |
